update/ meet ver.1
기본적인 기능 구현

DB에 등록된 mark를 map에 표시
map 클릭시 등록 팝업창 생성 및
팝업창에서 mark 등록시 DB에 저장 및 map에 추가
map에서 mark 클릭시 등록된내용 표시
상황별 시간 세팅 로직 추가 :
  2023-01-20 10:00am이 현재 시간일 때
  머무는 시간을 9:00am ~ 7:00am 으로 설정하면
  2023-01-21 9:00am ~ 2023-01-22 7:00am 으로 저장
위치기능 사용시 현재 위치 기준으로 map 보여짐 :
  navigator.geolocation.getCurrentPosition(success, error) 사용
mark 클릭시 뜨는 팝업에서 참석 누를 시, 올 수도 있는 사람 명 수 추가
DB에 등록된 mark의 떠나는 시간이 현재 시각보다 작으면 mark 삭제

--- a/src/main/resources/templates/popup/regist-mark.html
+++ b/src/main/resources/templates/popup/regist-mark.html
@@ -20,7 +20,7 @@
 <div class="body"></div>
 <div class="grad"></div>
 <div class="header">
-  <div><span th:text="소소한만남"></span></div><br>
+  <div><span th:text="|혹시 올 사람?|"></span></div><br>
   <div th:text="${#temporals.format(localDateTime,'yyyy-MM-dd')}">날짜</div>
 <!--  <div id ="currentTime" name="currentTime" th:text="${#temporals.format(localDateTime,'yyyy-MM-dd')}">날짜</div>-->
 </div>
