--- a/src/main/resources/templates/meet-map.html
+++ b/src/main/resources/templates/meet-map.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 <!--<top th:replace="~{layout/top :: top}"></top>-->
-<top th:replace="~{#{topHtml} :: top}"></top>
+<top th:replace="~{#{topHtml} :: top('test','1000','로그인','회원가입')}"></top>
 <div class="title"><h1>혹시 올 사람?</h1></div>
 <div id="mapid"></div>
 <input type="hidden" id="markLocationLat" name="markLocationLat" value="">
