--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,14 +13,16 @@
 <body>
 <div class="login-box">
   <h2>Login</h2>
-  <form id="loginForm" method="post" th:action>
+  <form id="loginForm" method="post" th:action th:object="${memberDto}">
     <div class="user-box">
-      <input type="text" name="" required="">
-      <label>Username</label>
+      <input type="text" th:field="*{username}" required="">
+      <div th:errors="*{username}" style="color: #ff3399;"></div>
+      <label>이름</label>
     </div>
     <div class="user-box">
-      <input type="password" name="" required="">
-      <label>Password</label>
+      <input type="password" th:field="*{password}" required="">
+      <div th:errors="*{password}" style="color: #ff3399;"></div>
+      <label>비밀번호</label>
     </div>
     <a href="#" onclick="submit()">
       <span></span>
