--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -14,27 +14,34 @@
 <body>
 <div class="login-box">
   <h2>Signup</h2>
-  <form id="signupForm" action="/signup" method="post">
+  <form id="signupForm" action="/signup" method="post" th:object="${memberDto}">
     <div class="user-box">
-      <input type="text" id="username" name="username" required="">
+      <input type="text" id="username" name="username" th:field="*{username}" required="">
+      <div th:errors="*{username}" style="color: #ff3399;"></div>
       <label>이름</label>
     </div>
     <div class="user-box">
-      <input type="password" id="password" name="password" required="">
+      <input type="password" id="password" name="password" th:field="*{password}" required="">
+      <div th:errors="*{password}" style="color: #ff3399;"></div>
       <label>비밀번호</label>
     </div>
     <div class="user-box">
-      <input type="password" id="passwordRe" name="passwordRe" required="">
+      <input type="password" id="passwordRe" name="passwordRe" th:field="*{passwordRe}" required="">
+      <div th:errors="*{passwordRe}" style="color: #ff3399;"></div>
       <label>비밀번호 재입력</label>
     </div>
     <div class="user-box">
-      <input type="text" id="age" name="age" required="">
+      <input type="text" id="age" name="age" th:field="*{age}" required="">
+      <div th:errors="*{age}" style="color: #ff3399;"></div>
       <label>나이(만)</label>
     </div>
     <div class="user-box">
       <input type="text" id="gender" name="gender" required="">
+      <div th:errors="*{gender}" style="color: #ff3399;"></div>
       <label>성별 - 남, 여, 비공개 중 택1</label>
     </div>
+    <div th:if="${#fields.hasGlobalErrors()}"><p th:each="error : ${#fields.globalErrors()}" th:text="${error}"
+                                                 style="color: #ff3399;"></p></div>
 
     <a href="#" onclick="submit()">
       <span></span>
