--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 <body>
 <div class="login-box">
   <h2>Login</h2>
-  <form id="loginForm" method="post" th:action th:object="${memberDto}">
+  <form id="loginForm" method="post" th:action th:object="${memberLoginDto}">
     <div class="user-box">
       <input type="text" th:field="*{username}" required="">
       <div th:errors="*{username}" style="color: #ff3399;"></div>
