--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -14,7 +14,7 @@
 <body>
 <div class="login-box">
   <h2>Signup</h2>
-  <form id="signupForm" action="/signup" method="post" th:object="${memberDto}">
+  <form id="signupForm" action="/signup" method="post" th:object="${memberSingupDto}">
     <div class="user-box">
       <input type="text" id="username" name="username" th:field="*{username}" required="">
       <div th:errors="*{username}" style="color: #ff3399;"></div>
