--- a/src/main/resources/templates/layout/top.html
+++ b/src/main/resources/templates/layout/top.html
@@ -23,7 +23,7 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-  <section class="navigation" th:fragment="top(username, cash, login, signup)">
+  <section class="navigation" th:fragment="top(main1, main2, main3)">
   <div class="nav-container">
     <div class="brand">
       <a href="/">혹시 올 사람?</a>
@@ -53,24 +53,16 @@
         </li>
         <li>
           <a href="#!">내정보</a>
-          <ul class="nav-dropdown">
-            <li>
-              <a href="#!" th:text="${username}">Web Design</a>
-            </li>
-            <li>
-              <a href="#!" th:text="${cash}">Web Development</a>
-            </li>
-          </ul>
         </li>
         <li>
-          <a href="/login" th:text="${login}">로그인</a>
+          <a href="/login" th:text="${main1}">main1</a>
         </li>
         <li>
-          <a href="/signup" th:text="${signup}">회원가입</a>
+          <a href="/signup" th:text="${main2}">main2</a>
         </li>
 
         <li>
-          <a href="#!" th:text="|현재 보유 : ${cash}원|">회원가입</a>
+          <a href="#!" th:text="|보유 금액 : ${main3}원|">main3</a>
         </li>
       </ul>
     </nav>
