--- a/src/main/resources/templates/layout/top.html
+++ b/src/main/resources/templates/layout/top.html
@@ -49,7 +49,7 @@
           </ul>
         </li>
         <li>
-          <a href="/charge">충전</a>
+          <a href="/payment/chargeCash">충전</a>
         </li>
         <li>
           <a href="/my-info">내정보</a>
