--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -8,7 +8,7 @@ body {
     background: linear-gradient(#141e30, #243b55);
 }
 
-.login-box {
+.charge-box {
     position: absolute;
     top: 50%;
     left: 50%;
