--- a/src/main/resources/templates/multi-chat.html
+++ b/src/main/resources/templates/multi-chat.html
@@ -26,7 +26,7 @@
           <span class="search">
             <input type="text" value="Search" class="input_search"></span>
           <li class="active"><a href="">
-            <h3 class="name" th:field="">Akshay Syal</h3><span class="online"></span>
+            <h3 class="name">Akshay Syal</h3><span class="online"></span>
             <h4 class="sub-msg">Lorem Ipsum is simply dummy,</h4>
             <h4 class="min">1 min</h4>
           </a></li>
